@@ -1,3 +1,8 @@
+2007-05-15  Joe English  <jenglish@users.sourceforge.net>
+
+	* unix/tkUnixRFont.c: Fix various memory leaks [Bug 1717830], 
+	[Bug 800149].
+
 2007-05-14  Don Porter  <dgp@users.sourceforge.net>
 
 	[Tk Bug 1712081]
